# Thriftee

./: .env.example  .gitignore  AGENT_HOOKS_SETUP.md  Cargo.toml  DEPLOYMENT.md  DEVELOPMENT.md  GITHUB_SETUP.md  LICENSE  README.md  REPOSITORY_STATUS.md  WEBHOOK_SETUP.md  docker-compose.prod.yml  docker-compose.yml
backend/: Cargo.toml  Dockerfile.prod
backend/docs/: auth_api.md  compilation_fixes_summary.md  hd_wallet_implementation.md  item_raffle_api.md  jwt_authentication_system.md  payment_api.md  task_3_1_completion_summary.md  task_3_2_completion_summary.md  task_3_3_completion_summary.md  wallet_system_documentation.md  websocket_api.md
backend/migrations/: 001_initial_schema.sql  002_add_constraints_and_relationships.sql  002_add_session_management.sql  003_add_additional_tables.sql  003_add_audit_logging.sql  004_add_performance_optimizations.sql  005_add_analytics_tables.sql  006_blockchain_events.sql  007_credit_transactions.sql  008_payment_tables.sql  009_item_management_tables.sql  010_audit_logs.sql  010_free_item_redemptions.sql  011_security_alerts.sql  012_add_wallet_mnemonic.sql  README.md  rollback_001_drop_initial_schema.sql  rollback_002_remove_constraints.sql  rollback_003_remove_additional_tables.sql
backend/src/: config.rs  database.rs  error.rs  main.rs
backend/src/blockchain/: client.rs  contract.rs  events.rs  gas.rs  mod.rs  tests.rs  transaction.rs  types.rs  wallet.rs
backend/src/database/: connection.rs  migrations.rs  mod.rs  transaction_manager.rs
backend/src/handlers/: auth.rs  credits.rs  health.rs  mod.rs  payments.rs  raffles.rs  wallet.rs  webhooks.rs  websocket.rs
backend/src/middleware/: auth.rs  mod.rs  performance.rs  rate_limiting.rs
backend/src/models/: analytics.rs  audit.rs  box_purchase.rs  credit.rs  free_item.rs  item.rs  mod.rs  notification.rs  raffle.rs  seller.rs  seller_subscription.rs  system_settings.rs  tests.rs  transaction.rs  user.rs
backend/src/repositories/: mod.rs  user_repository.rs
backend/src/security/: encryption.rs  input_validation.rs  mod.rs  monitoring.rs  rate_limiting.rs  session_management.rs
backend/src/services/: auth_service.rs  blockchain_service.rs  cache_service.rs  connection_pool.rs  credit_service.rs  database_optimization.rs  item_service.rs  mod.rs  notification_service.rs  payment_service.rs  raffle_service.rs  realtime_service.rs  wallet_service.rs
backend/src/utils/: crypto.rs  jwt.rs  mod.rs  validation.rs  webhook_verification.rs
backend/tests/: mod.rs
backend/tests/blockchain/: blockchain_integration_tests.rs
backend/tests/e2e/: user_workflows.rs
backend/tests/integration/: auth_tests.rs  mod.rs  raffle_tests.rs  wallet_hd_tests.rs
backend/tests/load/: concurrent_box_purchase.rs
(+165 files in other folders)
