[package]
name = "raffle-platform-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
actix-web = { workspace = true }
actix-cors = { workspace = true }
actix-web-actors = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
jsonwebtoken = { workspace = true }
bcrypt = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
rust_decimal = { workspace = true }
dotenvy = { workspace = true }
dotenv = { workspace = true }
ethers = { workspace = true }
reqwest = { workspace = true }
validator = { workspace = true }
config = { workspace = true }

# Workspace dependencies
raffle-platform-shared = { path = "../shared" }

# Additional backend-specific dependencies
stripe-rust = "0.25"
redis = { version = "0.24", features = ["tokio-comp"] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
aes-gcm = "0.10"
argon2 = "0.5"
base64 = "0.21"
rand = "0.8"
regex = "1.10"
pbkdf2 = "0.12"
bip39 = "2.0"
hdwallet = "0.4"
secp256k1 = { version = "0.28", features = ["recovery"] }

[dev-dependencies]
tokio-test = "0.4"